# AppleFoliarAI

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.MD  pyproject.toml
.github/workflows/: python.yaml
